--- a/Main.html
+++ b/Main.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.0.0/math.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+    <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
+        .calculator {
+            flex: 1;
+        }
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background-color: #f0f0f0; /* light grey background */
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+
 </head>
 <body>
 <div class="calculator">
@@ -116,6 +137,9 @@
         <div id="statsResult"></div>
     </div>
 </div>
+<footer style="text-align:center; margin-top: 20px;">
+    <p>&copy; 2024 Saurabh Kumar Dey</p>
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
